fix: add spacing on root elements apparently this was already done, but this ensures its more consistent

--- a/src/layout.css
+++ b/src/layout.css
@@ -1,10 +1,14 @@
 body {
   margin: 0 10px;
-  font-family: system-ui -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 }
 
-main {
-  display: block;
+// since we only add margin-block-end and margin-inline-end padding, the first
+// elements on the page will not have margin-block-start margings. this fixes
+// that, giving space to first elements
+// TODO: golf
+body > section, body > article, body > aside, body > nav, body > blockquote, body > span, body > dd, body > dt, body > button {
+  margin-top: $ws-medium;
 }
 
 body + section, body + article, body + nav {
